fix: 5-3 오류수정